# NexusAI

./: .dockerignore  .env.example  .env.template  .gitignore  ADD_YOUTUBE_API_KEY.md  CICD_ACTIVATION_GUIDE.md  CICD_CHECKLIST.md  CICD_COMPLETE.md  CICD_FINAL_SUMMARY.md  CICD_PROGRESS.md  CICD_QUICK_REFERENCE.md  CICD_SETUP.md  CICD_SUCCESS.md  CLEANUP_OLD_SERVICES.md  COMPLETE_FIX_GUIDE.md  CONTRIBUTING.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT_STATUS.md  DEPLOY_LANGSMITH.md  DOCKERFILES_CREATED.md  DOCKER_BUILD_FIX.md  DOMAIN_VERIFICATION_REQUIRED.md  Dockerfile  FIREBASE_AUTH_IMPLEMENTED.md  FIX_FIREBASE_DOMAIN.md  FIX_GCP_SECRET.md  GITHUB_SECRETS_SETUP.md  HOW_TO_ACCESS_APP.md  LANGSMITH_403_TROUBLESHOOTING.md  LANGSMITH_ARCHITECTURE.md  LANGSMITH_CLOUD_RUN_DEPLOYMENT.md  LANGSMITH_COMPLETE.md  LANGSMITH_FILES.md  LANGSMITH_FINAL_DEPLOYMENT.md  LANGSMITH_FIX_SUMMARY.md  LANGSMITH_GUIDE.md  LANGSMITH_IMPLEMENTATION.md  LANGSMITH_INTEGRATION_COMPLETE.md  LANGSMITH_INTEGRATION_PROGRESS.md  LANGSMITH_ORG_KEY_SETUP.md  (+58 more)
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
Chat/: Dockerfile  backend.py  database.py
Director/: Dockerfile  backend.py  database.py  models.py  nginx-cloudrun.conf  start-cloudrun.sh  storage.py
DocumentsSummarization/: Dockerfile  backend.py  database.py
ImageGeneration/: Dockerfile  backend.py  database.py  frontend.py  langsmith_integration_example.py  storage.py
VideoGeneration/: Dockerfile  backend.py  database.py  helper.py  models.py  storage.py
YoutubeTranscript/: Dockerfile  backend.py  database.py
frontend/: analytics_dashboard.html  (+5 more)
(+52 files in other folders)
