[project]
name = "access-to-veo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.40.64",
    "botocore>=1.40.64",
    "bs4>=0.0.2",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "firebase-admin>=7.1.0",
    "google-cloud-firestore>=2.22.0",
    "google-cloud-storage>=3.4.1",
    "google-genai>=1.46.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langsmith>=0.5.2",
    "matplotlib>=3.10.7",
    "moviepy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.4.0",
    "pydantic>=2.12.3",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.38.0",
    "youtube-transcript-api>=1.2.3",
]
